--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -29,7 +29,7 @@ jobs:
       # Convert latex => word document
       - uses: docker://pandoc/latex:2.11
         with:
-          args: -s main.tex -o manuscript.docx --bibliography references.bib -C 
+          args: -s main.tex -o output/manuscript.docx --bibliography references.bib -C 
       # Upload output as action artifact
       - uses: actions/upload-artifact@main
         with: 
