--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 # mac os files
 .DS_Store
+
+# latex build files
+logo1-eps-converted-to.pdf
+main.aux
+main.bbl
+main.blg
+main.fdb_latexmk
+main.fls
+main.log
+main.out
+main.pdf
+main.synctex.gz
